--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Favicon -->
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		
+		<!-- PWA icons -->
+		<link rel="icon" type="image/png" sizes="192x192" href="%sveltekit.assets%/logo-192.png">
+		<link rel="icon" type="image/png" sizes="512x512" href="%sveltekit.assets%/logo-512.png">
+		
+		<!-- Apple Touch Icon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
+		
+		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
